# PyP1

./: DRWsentimentCSV.csv  README.md  RevaturesentimentCSV.csv  main.py  pyproject.toml  stream_listener.py
companyCSVFiles/: Best BuysentimentCSV.csv  DRWsentimentCSV.csv  InfosyssentimentCSV.csv  revaturesentimentCSV.csv
